--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Default",
   "compilerOptions": {
     "allowJs": true,
     "target": "ES2017",
@@ -8,7 +10,6 @@
     "jsxImportSource": "@builder.io/qwik",
     "strict": true,
     "declaration": true,
-    "declarationDir": "lib-types",
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -17,5 +18,7 @@
     "isolatedModules": true,
     "types": ["vite/client"]
   },
-  "include": ["src"]
+  "include": [
+    "packages/**/*"
+  ]
 }
