--- a/packages/qwik/package.json
+++ b/packages/qwik/package.json
@@ -24,35 +24,33 @@
   "scripts": {
     "build": "qwik build",
     "build.lib": "vite build --mode lib",
-    "build.types": "tsc --emitDeclarationOnly",
-    "dev": "vite --mode ssr",
+    "dev": "vite --mode lib",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
     "prepublishOnly": "pnpm build",
     "release": "changelogen --release && npm publish && git push --follow-tags",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "1.2.7",
-    "@types/eslint": "8.44.1",
-    "@types/node": "^20.4.5",
-    "@typescript-eslint/eslint-plugin": "6.2.0",
-    "@typescript-eslint/parser": "6.2.0",
-    "changelogen": "^0.5.4",
-    "eslint": "8.45.0",
-    "eslint-plugin-qwik": "latest",
-    "prettier": "3.0.0",
-    "typescript": "5.1.6",
-    "undici": "5.22.1",
-    "vite": "4.4.7",
-    "vite-plugin-dts": "^3.5.2",
+    "@builder.io/qwik": "1.2.10",
+    "@types/eslint": "8.44.2",
+    "@types/node": "^20.5.9",
+    "@typescript-eslint/eslint-plugin": "6.5.0",
+    "@typescript-eslint/parser": "6.5.0",
+    "changelogen": "^0.5.5",
+    "eslint": "8.48.0",
+    "eslint-plugin-qwik": "^1.2.10",
+    "prettier": "3.0.3",
+    "typescript": "5.2.2",
+    "undici": "5.23.0",
+    "vite": "4.4.9",
+    "vite-plugin-dts": "^3.5.3",
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^4.55.0",
-    "@clerk/types": "^3.49.0"
+    "@clerk/clerk-js": "^4.56.2",
+    "@clerk/types": "^3.50.0"
   }
 }
